--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
-<main>
-	<div class="entry">{{ content }}</div>
-</main>
+<article>
+	<h1>{{ page.title }}</h1>
+	<div>{{ content }}</div>
+</article>
